# policy-mesh

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.context/: AGENTS.md  PROJECT.md  README.md  RULES.md  SCOPE.md  TASKS.md  agents.md  project.md  rules.md  scope.md  tasks.md
.github/workflows/: ci.yml
app/: main.py
app/audit/: __init__.py  context.py  models.py  repository.py  service.py
app/core/: __init__.py  config.py  policy_file.py  telemetry.py
app/decision/: __init__.py  engine.py  policies.py  reason_codes.py
app/providers/: __init__.py  anthropic.py  base.py  ollama.py  openai.py
app/services/: __init__.py  chat_orchestrator.py  metrics_stub.py
app/static/: index.html
context/: AGENTS.md  README.md  RULES.md  TASKS.md
docs/: API_USAGE.md  ARCHITECTURE.md  CONFIGURATION_SCENARIOS.md  DECISIONS.md  ENGINE_RULES.md  GETTING_STARTED.md  METRICS.md  POLICY_FILE_SCHEMA.md  PRIVACY.md  STRUCTURE.md  api_usage.md  architecture.md  configuration_scenarios.md  decisions.md  engine_rules.md  getting_started.md  metrics.md  policies.example.json  policy_file_schema.md  privacy.md  structure.md
migrations/: env.py
migrations/versions/: 001_baseline.py  002_audit_events.py
tests/: conftest.py
tests/integration/: test_audit.py  test_audit_endpoint.py  test_chat_flow.py  test_metrics.py  test_providers.py  test_routes_endpoint.py  test_ui.py
tests/unit/: test_anthropic_provider.py  test_audit.py  test_decision_engine.py  test_policy_file.py  test_reason_codes.py
(+8 files in other folders)
