[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "policy-mesh"
version = "0.1.0"
description = "Local-first AI gateway for controlled, auditable model routing."
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "httpx",
  "alembic",
  "sqlalchemy",
  "psycopg[binary]",
]

[tool.setuptools.packages.find]
include = ["app*"]
